--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
 
     <!-- === PRELOAD IMAGES === -->
     <link rel="preload" as="image" href="./resources/images/hero-banner.png" />
-    <link rel="preload" as="image" href="./resources/images/hero-circle-one.png" />
-    <link rel="preload" as="image" href="./resources/images/hero-circle-two.png" />
+    <link
+      rel="preload"
+      as="image"
+      href="./resources/images/hero-circle-one.png"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="./resources/images/hero-circle-two.png"
+    />
     <link rel="preload" as="image" href="./resources/images/heart-rate.svg" />
     <link rel="preload" as="image" href="./resources/images/calories.svg" />
   </head>
@@ -37,10 +45,7 @@
         </a>
 
         <nav class="navbar">
-          <button
-            class="nav-close-btn"
-            aria-label="close menu"
-          >
+          <button class="nav-close-btn" aria-label="close menu">
             <ion-icon name="close-sharp" aria-hidden="true"></ion-icon>
           </button>
 
@@ -77,7 +82,162 @@
       </div>
     </header>
 
+    <!-- === MAIN === -->
+    <main>
+      <article>
+        <!-- === HERO === -->
+        <section
+          class="section hero bg-dark has-after has-bg-image"
+          id="home"
+          aria-label="hero"
+          data-section
+          style="background-image: url('./resources/images/hero-bg.png')"
+        >
+          <div class="container">
+            <div class="hero-content">
+              <p class="hero-subtitle">
+                <strong class="strong">The Best</strong>Fitness Club
+              </p>
 
+              <h1 class="h1 hero-title">Work Hard To Get Better Life</h1>
+
+              <p class="section-text">
+                Duis mollis felis quis libero dictum vehicula. Duis dictum lorem
+                mi, a faucibus nisi eleifend eu.
+              </p>
+
+              <a href="#" class="btn btn-primary">Get Started</a>
+            </div>
+
+            <div class="hero-banner">
+              <img
+                src="./resources/images/hero-banner.png"
+                width="660"
+                height="753"
+                alt="hero banner"
+                class="w-100"
+              />
+
+              <img
+                src="./resources/images/hero-circle-one.png"
+                width="666"
+                height="666"
+                aria-hidden="true"
+                alt=""
+                class="circle circle-1"
+              />
+              <img
+                src="./resources/images/hero-circle-two.png"
+                width="666"
+                height="666"
+                aria-hidden="true"
+                alt=""
+                class="circle circle-2"
+              />
+
+              <img
+                src="./resources/images/heart-rate.svg"
+                width="255"
+                height="270"
+                alt="heart rate"
+                class="abs-img abs-img-1"
+              />
+              <img
+                src="./resources/images/calories.svg"
+                width="348"
+                height="224"
+                alt="calories"
+                class="abs-img abs-img-2"
+              />
+            </div>
+          </div>
+        </section>
+
+        <!-- === ABOUT === -->
+        <section class="section about" id="about" aria-label="about">
+          <div class="container">
+            <div class="about-banner has-after">
+              <img
+                src="./resources/images/about-banner.png"
+                width="660"
+                height="648"
+                loading="lazy"
+                alt="about banner"
+                class="w-100"
+              />
+
+              <img
+                src="./resources/images/about-circle-one.png"
+                width="660"
+                height="534"
+                loading="lazy"
+                aria-hidden="true"
+                alt=""
+                class="circle circle-1"
+              />
+              <img
+                src="./resources/images/about-circle-two.png"
+                width="660"
+                height="534"
+                loading="lazy"
+                aria-hidden="true"
+                alt=""
+                class="circle circle-2"
+              />
+
+              <img
+                src="./resources/images/fitness.png"
+                width="650"
+                height="154"
+                loading="lazy"
+                alt="fitness"
+                class="abs-img w-100"
+              />
+            </div>
+
+            <div class="about-content">
+              <p class="section-subtitle">About Us</p>
+
+              <h2 class="h2 section-title">Welcome To Our Fitness Gym</h2>
+
+              <p class="section-text">
+                Nam ut hendrerit leo. Aenean vel ipsum nunc. Curabitur in tellus
+                vitae nisi aliquet dapibus non et erat. Pellentesque porta
+                sapien non accumsan dignissim curabitur sagittis nulla sit amet
+                dolor feugiat.
+              </p>
+
+              <p class="section-text">
+                Integer placerat vitae metus posuere tincidunt. Nullam suscipit
+                ante ac aliquet viverra vestibulum ante ipsum primis.
+              </p>
+
+              <div class="wrapper">
+                <div class="about-coach">
+                  <figure class="coach-avatar">
+                    <img
+                      src="./resources/images/about-coach.jpg"
+                      width="65"
+                      height="65"
+                      loading="lazy"
+                      alt="Trainer"
+                    />
+                  </figure>
+
+                  <div>
+                    <h3 class="h3 coach-name">Denis Robinson</h3>
+
+                    <p class="coach-title">Our Coach</p>
+                  </div>
+                </div>
+
+                <a href="#" class="btn btn-primary">Explore More</a>
+              </div>
+            </div>
+          </div>
+        </section>
+      </article>
+    </main>
     <!-- === JS FILE LINK === -->
     <script src="./script/script.js" defer></script>
 
