--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       </article>
     </main>
     <!-- === JS FILE LINK === -->
-    <script src="./script/script.js" defer></script>
+    <script src="./resources/script/script.js" defer></script>
 
     <!--  === IONICON LINK === -->
     <script
