--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>SweatBox - Work Hard To Get Better Life</title>
 
     <!-- CSS FILE LINK -->
-    <link rel="stylesheet" href="./resources/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
     <!-- === GOOGLE FONT LINK === -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -19,19 +19,19 @@
     />
 
     <!-- === PRELOAD IMAGES === -->
-    <link rel="preload" as="image" href="./resources/images/hero-banner.png" />
+    <link rel="preload" as="image" href="./assets/images/hero-banner.png" />
     <link
       rel="preload"
       as="image"
-      href="./resources/images/hero-circle-one.png"
+      href="./assets/images/hero-circle-one.png"
     />
     <link
       rel="preload"
       as="image"
-      href="./resources/images/hero-circle-two.png"
+      href="./assets/images/hero-circle-two.png"
     />
-    <link rel="preload" as="image" href="./resources/images/heart-rate.svg" />
-    <link rel="preload" as="image" href="./resources/images/calories.svg" />
+    <link rel="preload" as="image" href="./assets/images/heart-rate.svg" />
+    <link rel="preload" as="image" href="./assets/images/calories.svg" />
   </head>
 
   <body id="top">
@@ -90,7 +90,7 @@
           class="section hero bg-dark has-after has-bg-image"
           id="home"
           aria-label="hero"
-          style="background-image: url('./resources/images/hero-bg.png')"
+          style="background-image: url('./assets/images/hero-bg.png')"
         >
           <div class="container">
             <div class="hero-content">
@@ -110,7 +110,7 @@
 
             <div class="hero-banner">
               <img
-                src="./resources/images/hero-banner.png"
+                src="./assets/images/hero-banner.png"
                 width="660"
                 height="753"
                 alt="hero banner"
@@ -118,7 +118,7 @@
               />
 
               <img
-                src="./resources/images/hero-circle-one.png"
+                src="./assets/images/hero-circle-one.png"
                 width="666"
                 height="666"
                 aria-hidden="true"
@@ -126,7 +126,7 @@
                 class="circle circle-1"
               />
               <img
-                src="./resources/images/hero-circle-two.png"
+                src="./assets/images/hero-circle-two.png"
                 width="666"
                 height="666"
                 aria-hidden="true"
@@ -135,14 +135,14 @@
               />
 
               <img
-                src="./resources/images/heart-rate.svg"
+                src="./assets/images/heart-rate.svg"
                 width="255"
                 height="270"
                 alt="heart rate"
                 class="abs-img abs-img-1"
               />
               <img
-                src="./resources/images/calories.svg"
+                src="./assets/images/calories.svg"
                 width="348"
                 height="224"
                 alt="calories"
@@ -157,7 +157,7 @@
           <div class="container">
             <div class="about-banner has-after">
               <img
-                src="./resources/images/about-banner.png"
+                src="./assets/images/about-banner.png"
                 width="660"
                 height="648"
                 loading="lazy"
@@ -166,7 +166,7 @@
               />
 
               <img
-                src="./resources/images/about-circle-one.png"
+                src="./assets/images/about-circle-one.png"
                 width="660"
                 height="534"
                 loading="lazy"
@@ -175,7 +175,7 @@
                 class="circle circle-1"
               />
               <img
-                src="./resources/images/about-circle-two.png"
+                src="./assets/images/about-circle-two.png"
                 width="660"
                 height="534"
                 loading="lazy"
@@ -185,7 +185,7 @@
               />
 
               <img
-                src="./resources/images/fitness.png"
+                src="./assets/images/fitness.png"
                 width="650"
                 height="154"
                 loading="lazy"
@@ -215,7 +215,7 @@
                 <div class="about-coach">
                   <figure class="coach-avatar">
                     <img
-                      src="./resources/images/about-coach.jpg"
+                      src="./assets/images/about-coach.jpg"
                       width="65"
                       height="65"
                       loading="lazy"
@@ -242,7 +242,7 @@
             <div
               class="video-card has-before has-bg-image"
               style="
-                background-image: url('./resources/images/video-banner.jpg');
+                background-image: url('./assets/images/video-banner.jpg');
               "
             >
               <h2 class="h2 card-title">Explore Fitness Life</h2>
@@ -261,7 +261,7 @@
           class="section class bg-dark has-bg-image"
           id="class"
           aria-label="class"
-          style="background-image: url('./resources/images/classes-bg.png')"
+          style="background-image: url('./assets/images/classes-bg.png')"
         >
           <div class="container">
             <p class="section-subtitle">Our Classes</p>
@@ -278,7 +278,7 @@
                     style="--width: 416; --height: 240"
                   >
                     <img
-                      src="./resources/images/class-1.jpg"
+                      src="./assets/images/class-1.jpg"
                       width="416"
                       height="240"
                       loading="lazy"
@@ -290,7 +290,7 @@
                   <div class="card-content">
                     <div class="title-wrapper">
                       <img
-                        src="./resources/images/class-icon-1.png"
+                        src="./assets/images/class-icon-1.png"
                         width="52"
                         height="52"
                         aria-hidden="true"
@@ -330,7 +330,7 @@
                     style="--width: 416; --height: 240"
                   >
                     <img
-                      src="./resources/images/class-2.jpg"
+                      src="./assets/images/class-2.jpg"
                       width="416"
                       height="240"
                       loading="lazy"
@@ -342,7 +342,7 @@
                   <div class="card-content">
                     <div class="title-wrapper">
                       <img
-                        src="./resources/images/class-icon-2.png"
+                        src="./assets/images/class-icon-2.png"
                         width="52"
                         height="52"
                         aria-hidden="true"
@@ -382,7 +382,7 @@
                     style="--width: 416; --height: 240"
                   >
                     <img
-                      src="./resources/images/class-3.jpg"
+                      src="./assets/images/class-3.jpg"
                       width="416"
                       height="240"
                       loading="lazy"
@@ -394,7 +394,7 @@
                   <div class="card-content">
                     <div class="title-wrapper">
                       <img
-                        src="./resources/images/class-icon-3.png"
+                        src="./assets/images/class-icon-3.png"
                         width="52"
                         height="52"
                         aria-hidden="true"
@@ -434,7 +434,7 @@
                     style="--width: 416; --height: 240"
                   >
                     <img
-                      src="./resources/images/class-4.jpg"
+                      src="./assets/images/class-4.jpg"
                       width="416"
                       height="240"
                       loading="lazy"
@@ -446,7 +446,7 @@
                   <div class="card-content">
                     <div class="title-wrapper">
                       <img
-                        src="./resources/images/class-icon-4.png"
+                        src="./assets/images/class-icon-4.png"
                         width="52"
                         height="52"
                         aria-hidden="true"
@@ -497,7 +497,7 @@
                     style="--width: 440; --height: 270"
                   >
                     <img
-                      src="./resources/images/blog-1.jpg"
+                      src="./assets/images/blog-1.jpg"
                       width="440"
                       height="270"
                       loading="lazy"
@@ -535,7 +535,7 @@
                     style="--width: 440; --height: 270"
                   >
                     <img
-                      src="./resources/images/blog-2.jpg"
+                      src="./assets/images/blog-2.jpg"
                       width="440"
                       height="270"
                       loading="lazy"
@@ -573,7 +573,7 @@
                     style="--width: 440; --height: 270"
                   >
                     <img
-                      src="./resources/images/blog-3.jpg"
+                      src="./assets/images/blog-3.jpg"
                       width="440"
                       height="270"
                       loading="lazy"
@@ -613,7 +613,7 @@
     <footer class="footer">
       <div
         class="section footer-top bg-dark has-bg-image"
-        style="background-image: url('./resources/images/footer-bg.png')"
+        style="background-image: url('./assets/images/footer-bg.png')"
       >
         <div class="container">
           <div class="footer-brand">
@@ -629,7 +629,7 @@
 
             <div class="wrapper">
               <img
-                src="./resources/images/footer-clock.png"
+                src="./assets/images/footer-clock.png"
                 width="34"
                 height="34"
                 loading="lazy"
@@ -807,7 +807,7 @@
       <ion-icon name="caret-up-sharp" aria-hidden="true"></ion-icon>
     </a>
     <!-- === JS FILE LINK === -->
-    <script src="./resources/script/script.js" defer></script>
+    <script src="./assets/script/script.js" defer></script>
 
     <!--  === IONICON LINK === -->
     <script
